# satcal

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
src/satcal/: __init__.py  cli.py
