[project]
name = "satcal"
version = "0.1.0"
description = "CLI tool for predicting visible satellite passes from a given location."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "requests-cache>=1.3.1",
    "skyfield>=1.54",
]
license = "MIT"
license-files = [
    "LICENSE.txt",
]

[project.scripts]
satcal = "satcal.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
